--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="calculator">
         <!-- Display -->
         <div class="calculator-display">
-            <h1>Calculator</h1>
+            <h1>Calculator4545841254</h1>
 
         </div>
         <!-- Buttons -->
