--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <div class="calculator">
         <!-- Display -->
         <div class="calculator-display">
-            <h1>Calculator4545841254</h1>
+            <h1>Calculator</h1>
 
         </div>
         <!-- Buttons -->
-        <div class="calculator-bottons">
+        <div class="calculator-buttons">
             <button class="operator" value="+">+</button>
             <button class="operator" value="-">-</button>
             <button class="operator" value="*">×</button>
